--- a/indix.html
+++ b/indix.html
@@ -2,4 +2,5 @@
 <p>This is a nee feature(button)</p>
 <p>this is a new feature (dropdown)</p>
 
-<p>This is for check added changes after undo</p>
+<p>This is for check added changes after undo first</p>
+<p>This is for check added changes after undo second</p>
